--- a/src/app/pages/dte/coin-disburstment/create/coin-disburstment-create.component.html
+++ b/src/app/pages/dte/coin-disburstment/create/coin-disburstment-create.component.html
@@ -236,7 +236,7 @@
 
               <ngx-datatable-column name="{{'call_objective.text8' | translate}}" prop="name"></ngx-datatable-column>
               <ngx-datatable-column name="{{'global.label.code' | translate}}" prop="code"></ngx-datatable-column>
-              <ngx-datatable-column name="Tipe" prop="classification"></ngx-datatable-column>
+              <ngx-datatable-column name="{{'global.label.type' | translate}}" prop="classification"></ngx-datatable-column>
               <!--[R]-->
               <ngx-datatable-column name="{{'call_objective.text10' | translate}}" prop="retail_classification"></ngx-datatable-column>
               <ngx-datatable-column name="{{'dte.audience.text14' | translate}}" prop="src_classification"></ngx-datatable-column>
