--- a/src/app/pages/dte/mission-builder/create/dialog-yes-no/dialog-yes-no.component.html
+++ b/src/app/pages/dte/mission-builder/create/dialog-yes-no/dialog-yes-no.component.html
@@ -1,12 +1,12 @@
-<h2 class="">Select Branch</h2>
+<h2 class="">{{'dte.task_sequencing.select_branch' | translate}}</h2>
 
 <mat-dialog-content>
 
-  <button mat-fab class="mr-2" color="primary" matTooltip="Yes Branch" (click)="decisionType('yes')">
+  <button mat-fab class="mr-2" color="primary" matTooltip="{{'dte.task_sequencing.yes_branch' | translate}}" (click)="decisionType('yes')">
     <mat-icon>check</mat-icon>
   </button>
 
-  <button mat-fab class="mr-2" color="primary" matTooltip="No Branch" (click)="decisionType('no')">
+  <button mat-fab class="mr-2" color="primary" matTooltip="{{'dte.task_sequencing.no_branch' | translate}}" (click)="decisionType('no')">
     <mat-icon>close</mat-icon>
   </button>
 
