--- a/src/app/shared/import-audience/import-audience.component.html
+++ b/src/app/shared/import-audience/import-audience.component.html
@@ -36,7 +36,7 @@
       <table class="table">
         <thead>
           <tr>
-            <th nowrap>ID</th>
+            <th nowrap>{{'notification.popup_notifikasi.text2' | translate}}</th>
             <th nowrap>{{'global.label.name' | translate}}</th>
             <th nowrap>{{'global.label.code' | translate}}</th>
             <th nowrap>{{'global.label.owner_name' | translate}}</th>
