--- a/src/app/pages/dte/audience/create/personalize/audience-create-personalize.component.html
+++ b/src/app/pages/dte/audience/create/personalize/audience-create-personalize.component.html
@@ -13,7 +13,7 @@
                 <mat-form-field class="is-light form-primary">
                   <input matInput type="text" formControlName="name" placeholder="{{'dte.audience.text4' | translate }}" />
                   <mat-error>
-                    {{'dte.audience.text4' | translate }} {{'global.messages.mandatory_text' | translate}} <!-- // TODO -->
+                    {{'dte.audience.text4' | translate }} {{'global.messages.mandatory_text' | translate}}
                   </mat-error>
                 </mat-form-field>
   
@@ -25,8 +25,8 @@
                   > <!-- // TODO -->
                     <ngx-mat-select-search
                       [formControl]="filterPublishMisi"
-                      [placeholderLabel]="'Cari Publish Misi...'"
-                      [noEntriesFoundLabel]="'Tidak ada Publish Misi yang ditemukan'"
+                      placeholderLabel="{{'global.label.search' | translate}}"
+                      noEntriesFoundLabel="{{'global.messages.data_not_found' | translate}}"
                     ></ngx-mat-select-search> <!-- // TODO -->
                     <mat-option
                       *ngFor="let item of filteredPublishMisi | async"
@@ -112,9 +112,9 @@
                       class="is-danger"
                       (click)="exportAudience()"
                     >
-                      <mat-icon>arrow_upward</mat-icon> Export Template
+                      <mat-icon>arrow_upward</mat-icon> {{'manajemen_barang_sku.manajemen_koin.text8' | translate}}
                     </button>
-                    <label *ngIf="exportTemplate" style="color: white;">Downloading Template</label>
+                    <label *ngIf="exportTemplate" style="color: white;">{{'dte.audience.downloading_template' | translate}}</label>
                   </div>
                   <button
                     mat-raised-button
@@ -122,7 +122,7 @@
                     class="is-danger"
                     (click)="importAudience()"
                   >
-                    <mat-icon>arrow_downward</mat-icon> Import XLSX
+                    <mat-icon>arrow_downward</mat-icon> {{'global.button.import' | translate}} XLSX
                   </button>
                 </div>
               </div>
