--- a/src/app/pages/dte/mission-builder/create/diaglog-misi/diaglog-misi.component.html
+++ b/src/app/pages/dte/mission-builder/create/diaglog-misi/diaglog-misi.component.html
@@ -1,27 +1,27 @@
 <form [formGroup]="form" (ngSubmit)="submit(form)">
-  <h2 id="header-card-mission" class="">Pengaturan Misi</h2>
+  <h2 id="header-card-mission" class="">{{'dte.task_sequencing.text27' | translate}}</h2>
 
   <mat-dialog-content>
     <div class="pb-16" fxLayout="row" fxLayoutGap="24px" fxLayoutAlign="start center">
-      <mat-checkbox id="pin-up" [formControl]="status_pin_up" name="status_pin_up">Pin Up Misi</mat-checkbox>
+      <mat-checkbox id="pin-up" [formControl]="status_pin_up" name="status_pin_up">{{'dte.task_sequencing.text28' | translate}}</mat-checkbox>
       <mat-checkbox id="nonCoinReward" [formControl]="non_coin_reward" name="non_coin_reward" (change)="selectChange($event)">
-        Reward Hadiah (Non Coin)
+        {{'dte.task_sequencing.reward_non_coin' | translate}}
       </mat-checkbox>
       <div>
         <mat-form-field style="width: 100%" *ngIf="form.value.non_coin_reward">
-          <input id="rewardDescription" matInput type="text" maxlength="20" formControlName="reward_description" placeholder="Keterangan Reward" (change)="changeRewardDesc($event)" />
+          <input id="rewardDescription" matInput type="text" maxlength="20" formControlName="reward_description" placeholder="{{'dte.task_sequencing.reward_description' | translate}}" (change)="changeRewardDesc($event)" />
         </mat-form-field>
         <div class="mat-error" style="font-size: 14px; margin-top: -10px;" *ngIf="isRewardError">
-          Keterangan harus diisi
+          {{'dte.task_sequencing.description' | translate}} {{'global.messages.mandatory_text' | translate}}
         </div>
       </div>
     </div>
 
     <mat-form-field style="width: 100%">
-      <mat-select formControlName="task_template_id" placeholder="Pilih Template Misi" id="task-template-id" (click)="selectForm('template')"
+      <mat-select formControlName="task_template_id" placeholder="{{'dte.task_sequencing.text29' | translate}}" id="task-template-id" (click)="selectForm('template')"
         (selectionChange)="selectChangeMisi($event)" #singleSelect>
-        <ngx-mat-select-search id="select-search-template" [formControl]="filterMission" [placeholderLabel]="'Cari Template Misi...'"
-          [noEntriesFoundLabel]="'Tidak ada Template Misi yang ditemukan'" [clearSearchInput]="false">
+        <ngx-mat-select-search id="select-search-template" [formControl]="filterMission" placeholderLabel="{{'global.label.search' | translate}}"
+          noEntriesFoundLabel="{{'global.messages.data_not_found' | translate}}" [clearSearchInput]="false">
         </ngx-mat-select-search>
         <mat-option *ngFor="let item of filteredMission | async" [value]="item.id">
           {{item.name}}
@@ -30,10 +30,10 @@
     </mat-form-field>
 
     <mat-form-field style="width: 100%">
-      <mat-select formControlName="task_template_other_name_id" placeholder="Pilih Nama Lain Misi"
+      <mat-select formControlName="task_template_other_name_id" placeholder="{{'dte.task_sequencing.text31' | translate}}"
         id="task-template-other-name-id" (click)="selectForm('namaLain')" (selectionChange)="selectChangeMisiOtherName($event)" #singleSelect>
-        <ngx-mat-select-search id="select-search-namaLain" [formControl]="filterMissionOther" [placeholderLabel]="'Cari Nama Lain Misi...'"
-          [noEntriesFoundLabel]="'Tidak ada Nama Lain Misi yang ditemukan'" [clearSearchInput]="false">
+        <ngx-mat-select-search id="select-search-namaLain" [formControl]="filterMissionOther" placeholderLabel="{{'global.label.search' | translate}}"
+          noEntriesFoundLabel="{{'global.messages.data_not_found' | translate}}" [clearSearchInput]="false">
         </ngx-mat-select-search>
         <mat-option *ngFor="let item of filteredMissionOther | async" [value]="item.id">
           {{item.other_name}}
@@ -42,7 +42,7 @@
     </mat-form-field>
 
     <mat-form-field style="width: 100%">
-      <input id="start-date" matInput formControlName="start_date" placeholder="Tanggal Awal" [matDatepicker]="start_date"
+      <input id="start-date" matInput formControlName="start_date" placeholder="{{'manajemen_barang_sku.manajemen_koin.text15' | translate}}" [matDatepicker]="start_date"
         (focus)="start_date.open()" [min]="minDate" [max]="maxDate" readonly />
       <mat-datepicker-toggle matSuffix [for]="start_date"></mat-datepicker-toggle>
       <mat-datepicker #start_date></mat-datepicker>
@@ -55,15 +55,15 @@
       <mat-datepicker #end_date></mat-datepicker>
     </mat-form-field>
 
-    Push To FF
+    {{'dte.pengatur_jadwal_program.text23' | translate}}
     <mat-slide-toggle id="toggle-pushToFF" style="margin-right: 20px" [formControl]="pushFF" name="push-to-ff"
       (change)="selectChange($event)" [disabled]="form.value.is_ir_template === 1"></mat-slide-toggle>
 
-    Verifikasi FF
+    {{'dte.task_sequencing.text33' | translate}}
     <mat-slide-toggle id="toggle-verifikasiFF" style="margin-right: 20px" [formControl]="verifikasiFF" name="verifikasi-ff"
       (change)="selectChange($event)" [disabled]="form.value.is_ir_template === 1"></mat-slide-toggle>
 
-    Verifikasi Manual
+    {{'dte.task_sequencing.text34' | translate}}
     <mat-slide-toggle id="toggle-verifikasiManual" style="margin-right: 20px" [formControl]="verifikasi" name="verifikasi"
       (change)="selectChange($event)" [disabled]="form.value.is_ir_template === 1"></mat-slide-toggle>
 
@@ -72,19 +72,19 @@
     <br><br>
     <div *ngIf="form.value.pushFF === false">
       <mat-form-field style="width: 100%">
-        <input id="coinSubmission" matInput type="text" (keypress)="numberOnly($event)" formControlName="coin_submission" placeholder="Coin Submission" />
+        <input id="coinSubmission" matInput type="text" (keypress)="numberOnly($event)" formControlName="coin_submission" placeholder="{{'dte.task_sequencing.text35' | translate}}" />
       </mat-form-field>
 
       <mat-form-field style="width: 100%">
-        <input id="coinVerification" matInput type="text" (keypress)="numberOnly($event)" formControlName="coin_verification" placeholder="Coin Verification" />
+        <input id="coinVerification" matInput type="text" (keypress)="numberOnly($event)" formControlName="coin_verification" placeholder="{{'dte.task_sequencing.text36' | translate}}" />
       </mat-form-field>
     </div>
 
   </mat-dialog-content>
   <br><br>
   <mat-dialog-actions>
-    <button id="btn-submit-card-mission" mat-raised-button color="success" type="submit">Simpan</button>
-    <button id="btn-cancel-card-mission" mat-raised-button color="warn" type="button" (click)="dialogRef.close()">Batal</button>
+    <button id="btn-submit-card-mission" mat-raised-button color="success" type="submit">{{'global.button.save' | translate}}</button>
+    <button id="btn-cancel-card-mission" mat-raised-button color="warn" type="button" (click)="dialogRef.close()">{{'global.button.cancel' | translate}}</button>
   </mat-dialog-actions>
 
 </form>
