--- a/src/app/pages/dte/mission-builder/create/diaglog-waktu-tunggu/diaglog-waktu-tunggu.component.html
+++ b/src/app/pages/dte/mission-builder/create/diaglog-waktu-tunggu/diaglog-waktu-tunggu.component.html
@@ -1,25 +1,25 @@
 <form [formGroup]="form" (ngSubmit)="submit(form)">
-  <h2 class="">Pengaturan Waktu Tunggu</h2>
+  <h2 class="">{{'dte.task_sequencing.waiting_time_settings' | translate}}</h2>
 
   <mat-dialog-content>
 
     <mat-form-field style="width: 100%">
-      <input matInput type="text" (keypress)="numberOnly($event)" formControlName="time" placeholder="Waktu Tunggu"/>
+      <input matInput type="text" (keypress)="numberOnly($event)" formControlName="time" placeholder="{{'dte.task_sequencing.text24' | translate}}"/>
     </mat-form-field>
 
     <mat-form-field style="width: 100%">
-      <mat-select placeholder="Type" formControlName="type">
-        <mat-option value="day">Hari</mat-option>
-        <mat-option value="week">Minggu</mat-option>
-        <mat-option value="hour">Jam</mat-option>
+      <mat-select placeholder="{{'global.label.type' | translate}}" formControlName="type">
+        <mat-option value="day">{{'dte.task_sequencing.day' | translate}}</mat-option>
+        <mat-option value="week">{{'dte.task_sequencing.week' | translate}}</mat-option>
+        <mat-option value="hour">{{'dte.task_sequencing.hour' | translate}}</mat-option>
       </mat-select>
     </mat-form-field>
 
   </mat-dialog-content>
   <br><br>
   <mat-dialog-actions>
-    <button mat-raised-button color="success" type="submit">Simpan</button>
-    <button mat-raised-button color="warn" type="button" (click)="dialogRef.close()">Batal</button>
+    <button mat-raised-button color="success" type="submit">{{'global.button.save' | translate}}</button>
+    <button mat-raised-button color="warn" type="button" (click)="dialogRef.close()">{{'global.button.cancel' | translate}}</button>
   </mat-dialog-actions>
 
 </form>
