--- a/src/app/pages/dte/mission-builder/create/dialog-coin/dialog-coin.component.html
+++ b/src/app/pages/dte/mission-builder/create/dialog-coin/dialog-coin.component.html
@@ -1,17 +1,17 @@
 <form [formGroup]="form" (ngSubmit)="submit(form)">
-  <h2 class="">Coin</h2>
+  <h2 class="">{{'dte.task_sequencing.coin' | translate}}</h2>
 
   <mat-dialog-content>
 
     <mat-form-field style="width: 100%">
-      <input matInput type="text" (keypress)="numberOnly($event)" formControlName="total_coin" placeholder="Total Coin" />
+      <input matInput type="text" (keypress)="numberOnly($event)" formControlName="total_coin" placeholder="{{'manajemen_barang_sku.manajemen_koin.text6' | translate}}" />
     </mat-form-field>
 
   </mat-dialog-content>
   <br><br>
   <mat-dialog-actions>
-    <button mat-raised-button color="success" type="submit">Simpan</button>
-    <button mat-raised-button color="warn" type="button" (click)="dialogRef.close()">Batal</button>
+    <button mat-raised-button color="success" type="submit">{{'global.button.save' | translate}}</button>
+    <button mat-raised-button color="warn" type="button" (click)="dialogRef.close()">{{'global.button.cancel' | translate}}</button>
   </mat-dialog-actions>
 
 </form>
