--- a/src/app/pages/notification/create/notification-create.component.html
+++ b/src/app/pages/notification/create/notification-create.component.html
@@ -68,10 +68,10 @@
               <div fxLayout="row" fxFlex="25" *ngIf="formNotification.controls['user_group'].value !== 'tsm'">
                 <mat-form-field fxFlex="50" class="is-light form-primary">
                   <input matInput [matDatepicker]="tanggal_terbit" (focus)="tanggal_terbit.open()"
-                    formControlName="date" placeholder="Tanggal Terbit">
+                    formControlName="date" placeholder="{{'notification.popup_notifikasi.text7' | translate}}">
                   <mat-error
                     *ngIf="formNotification.controls['date'].hasError('required') && formNotification.controls['date'].touched">
-                    Tanggal Terbit harus diisi
+                    {{'notification.popup_notifikasi.text7' | translate}} {{'global.messages.mandatory_text' | translate}}
                   </mat-error>
                   <mat-datepicker-toggle matSuffix [for]="tanggal_terbit">
                     <mat-icon matDatepickerToggleIcon>date_range</mat-icon>
@@ -80,13 +80,13 @@
                 </mat-form-field>
                 <div fxFlex="10"></div>
                 <mat-form-field fxFlex="30" class="is-light form-primary" id="time">
-                  <input matInput formControlName="time" placeholder="Jam Terbit" [ngxTimepicker]="fullTime"
+                  <input matInput formControlName="time" placeholder="{{'notification.popup_notifikasi.text8' | translate}}" [ngxTimepicker]="fullTime"
                     [format]="24" readonly>
                   <mat-icon matSuffix>access_time</mat-icon>
                   <ngx-material-timepicker #fullTime></ngx-material-timepicker>
                   <mat-error
                     *ngIf="formNotification.controls['time'].hasError('required') && formNotification.controls['time'].touched">
-                    Waktu harus diisi
+                    {{'notification.popup_notifikasi.text8' | translate}} {{'global.messages.mandatory_text' | translate}}
                   </mat-error>
                 </mat-form-field>
               </div>
@@ -126,7 +126,7 @@
                 </mat-error>
                 <mat-error
                   *ngIf="formNotification.controls['button_text'].hasError('maxlength') && formNotification.controls['button_text'].touched">
-                  {{'iklan_dalam_aplikasi.spanduk_online.text_button' | translate}} Maksimal 30 karakter
+                  {{'iklan_dalam_aplikasi.spanduk_online.text_button' | translate}} {{'notification.buat_notifikasi.max_30_char' | translate}}
                 </mat-error>
               </mat-form-field>
             </div>
@@ -243,7 +243,8 @@
               <div ngfDrop selectable="1" [(validDrag)]="validComboDrag" [(file)]="videoContentType" accept="video/mp4"
                 class="well my-drop-zone" [class.invalid-drag]="validComboDrag===false"
                 [class.valid-drag]="validComboDrag" (fileChange)="onVideoContentTypeSelect($event)">
-                Tarik Video kesini atau <strong>pilih file</strong>
+                <span [innerHTML]="('global.label.drag_video_or_select' | translate)"></span>
+                <!-- Tarik Video kesini atau <strong>pilih file</strong> -->
               </div>
             </div>
             <div *ngIf="videoContentTypeURL">
@@ -267,7 +268,7 @@
 
           <div fxLayout="row">
             <mat-form-field fxFlex="45" class="is-light form-primary">
-              <mat-select placeholder="Tipe Pengulangan" formControlName="type_of_recurrence"
+              <mat-select placeholder="{{'notification.buat_notifikasi.text13' | translate}}" formControlName="type_of_recurrence"
                 (selectionChange)="checkOnetimeFrequency(typeOfRecurrence)" [(ngModel)]="typeOfRecurrence">
                 <mat-option *ngFor="let item of listTypeOfRecurrence" [value]="item.id">{{item.name}}</mat-option>
               </mat-select>
@@ -325,7 +326,7 @@
             <div fxLayout="row wrap" fxLayoutAlign="space-between stretch" fxLayout.lt-md="column" class="pt-16"
               fxLayoutGap="20px" fxLayoutGap.lt-md="0px">
               <mat-form-field fxFlex="40" class="is-light form-primary">
-                <mat-select placeholder="Tanggal" formControlName="recurrence_date">
+                <mat-select placeholder="{{'global.label.date' | translate}}" formControlName="recurrence_date">
                   <mat-option *ngFor="let item of listDates" [value]="item">{{item}}</mat-option>
                 </mat-select>
               </mat-form-field>
@@ -344,12 +345,12 @@
             <div fxLayout="row wrap" fxLayoutAlign="space-between stretch" fxLayout.lt-md="column" class="pt-16"
               fxLayoutGap="20px" fxLayoutGap.lt-md="0px">
               <mat-form-field fxFlex="28" class="is-light form-primary">
-                <mat-select placeholder="Tanggal" formControlName="recurrence_date">
+                <mat-select placeholder="{{'global.label.date' | translate}}" formControlName="recurrence_date">
                   <mat-option *ngFor="let item of listDates" [value]="item">{{item}}</mat-option>
                 </mat-select>
               </mat-form-field>
               <mat-form-field fxFlex="28" class="is-light form-primary">
-                <mat-select placeholder="Bulan" formControlName="recurrence_month">
+                <mat-select placeholder="{{'global.label.month' | translate}}" formControlName="recurrence_month">
                   <mat-option *ngFor="let item of listMonths" [value]="item.id">{{item.name}}</mat-option>
                 </mat-select>
               </mat-form-field>
@@ -389,15 +390,15 @@
                 <mat-datepicker #startPicker></mat-datepicker>
                 <mat-error class="mt-8 px-24"
                   *ngIf="formRecurrenceCommon.controls['recurrence_start_date'].hasError('required') && formRecurrenceCommon.controls['recurrence_start_date'].touched">
-                  Tanggal mulai {{'global.messages.mandatory_text' | translate}}.
+                  {{'manajemen_barang_sku.manajemen_koin.text15' | translate}} {{'global.messages.mandatory_text' | translate}}.
                 </mat-error>
               </mat-form-field>
               <div fxFlex="25">
                 <div fxFlex="100" fxLayout="column">
                   <mat-radio-group formControlName="end_option" class="radio-group">
-                    <mat-radio-button value="no_end_date">Tidak berakhir</mat-radio-button>
-                    <mat-radio-button value="end_count">Berakhir setelah</mat-radio-button>
-                    <mat-radio-button value="end_date">Berakhir pada</mat-radio-button>
+                    <mat-radio-button value="no_end_date">{{'notification.buat_notifikasi.not_end' | translate}}</mat-radio-button>
+                    <mat-radio-button value="end_count">{{'notification.buat_notifikasi.end_after' | translate}}</mat-radio-button>
+                    <mat-radio-button value="end_date">{{'notification.buat_notifikasi.ended_at' | translate}}</mat-radio-button>
                   </mat-radio-group>
                 </div>
               </div>
@@ -406,7 +407,7 @@
                   <div></div>
                   <mat-form-field fxFlex="30" class="is-light"
                     *ngIf="formRecurrenceCommon.controls.end_option.value === 'end_count'">
-                    <span matPrefix>Pengulangan ke&nbsp;</span>
+                    <span matPrefix>{{'notification.buat_notifikasi.repeat_at' | translate}}&nbsp;</span>
                     <input matInput type="number" formControlName="end_recurrence_count">
                   </mat-form-field>
                   <mat-form-field fxFlex="30" class="is-light form-primary"
@@ -417,7 +418,7 @@
                     <mat-datepicker #endPicker></mat-datepicker>
                     <mat-error class="mt-8 px-24"
                       *ngIf="formRecurrenceCommon.controls['recurrence_end_date'].hasError('required') && formRecurrenceCommon.controls['recurrence_end_date'].touched">
-                      Tanggal selesai {{'global.messages.mandatory_text' | translate}}.
+                      {{'manajemen_barang_sku.produk.end_date' | translate}} {{'global.messages.mandatory_text' | translate}}.
                     </mat-error>
                   </mat-form-field>
                 </div>
@@ -428,7 +429,7 @@
           <!-- Targeted Audience Options -->
           <div class="pt-16 pb-16" fxLayout="row" fxLayoutAlign="start center">
             <h3 class="">
-              <strong>Filter Pengguna</strong>
+              <strong>{{'notification.buat_notifikasi.text16' | translate}}</strong>
             </h3>
           </div>
 
@@ -437,12 +438,12 @@
             <div class="">
               <div fxLayout="row">
                 <mat-form-field fxFlex="45" class="is-light form-primary">
-                  <mat-select formControlName="is_smoking" placeholder="Tipe Konsumen">
+                  <mat-select formControlName="is_smoking" placeholder="{{'notification.buat_notifikasi.consumer_type' | translate}}">
                     <mat-option *ngFor="let item of listConsumentType" [value]="item.value">{{item.name}}</mat-option>
                   </mat-select>
                   <mat-error
                     *ngIf="formNotification.controls['is_smoking'].hasError('required') && formNotification.controls['is_smoking'].touched">
-                    Tipe Konsumen {{'global.messages.mandatory_text' | translate}}
+                    {{'notification.buat_notifikasi.consumer_type' | translate}} {{'global.messages.mandatory_text' | translate}}
                   </mat-error>
                 </mat-form-field>
               </div>
@@ -502,7 +503,7 @@
           <div class="pb-16" *ngIf="formNotification.controls['user_group'].value === 'customer'">
             <div class="pt-16" fxLayout="row" fxLayoutAlign="start center">
               <h3 class="">
-                <strong>Employee</strong>
+                <strong>{{'notification.buat_notifikasi.employee' | translate}}</strong>
               </h3>
             </div>
             <mat-radio-group formControlName="employee_filter" class="radio-group">
@@ -755,10 +756,10 @@
               fxLayoutAlign="end center" class="p-16 export">
               <a #downloadLink></a>
               <button mat-raised-button type="button" class="is-danger" (click)="import()">
-                <mat-icon>arrow_downward</mat-icon> Import XLSX
+                <mat-icon>arrow_downward</mat-icon> {{'global.button.import' | translate}} XLSX
               </button>
               <button mat-raised-button type="button" class="is-danger" (click)="export()">
-                <mat-icon>arrow_upward</mat-icon> Export XLSX
+                <mat-icon>arrow_upward</mat-icon> {{'global.button.export' | translate}} XLSX
               </button>
             </div>
             <mat-progress-bar [color]="'primary'" [mode]="'indeterminate'" *ngIf="loadingIndicator"></mat-progress-bar>
@@ -785,12 +786,12 @@
                   {{row.code ? row.code : '-'}}
                 </ng-template>
               </ngx-datatable-column>
-              <ngx-datatable-column name="Owner" prop="owner">
+              <ngx-datatable-column name="{{'global.label.owner_name' | translate}}" prop="owner">
                 <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
                   {{row.owner ? row.owner : '-'}}
                 </ng-template>
               </ngx-datatable-column>
-              <ngx-datatable-column name="Tipe" prop="type">
+              <ngx-datatable-column name="{{'global.label.type' | translate}}" prop="type">
                 <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
                   {{row.type.toUpperCase()}}
                 </ng-template>
@@ -807,8 +808,8 @@
         <div *ngIf="!typeOfRecurrence == 'OneTime' || isActiveInactiveShow" class="pt-16" fxLayout="row">
           <mat-form-field fxFlex="45" class="is-light form-primary">
             <mat-select placeholder="Status" formControlName="status">
-              <mat-option value="Active">Active</mat-option>
-              <mat-option value="Inactive">Inactive</mat-option>
+              <mat-option value="Active">{{'global.label.active' | translate}}</mat-option>
+              <mat-option value="Inactive">{{'global.label.inactive' | translate}}</mat-option>
             </mat-select>
           </mat-form-field>
         </div>
@@ -818,8 +819,7 @@
             {{ls.locale.global.button.save}}
           </button>
         </div>
-        <span class="noEditOptions" *ngIf="!isHideSaveButton">Notifikasi satu kali tidak dapat diedit, karena telah
-          dikirim langsung saat dibuat.</span>
+        <span class="noEditOptions" *ngIf="!isHideSaveButton">{{'notification.buat_notifikasi.message4' | translate}}</span>
       </form>
     </div>
   </div>
