--- a/src/app/pages/popup-notification/create/popup-notification-create.component.html
+++ b/src/app/pages/popup-notification/create/popup-notification-create.component.html
@@ -39,7 +39,7 @@
                 <mat-datepicker #tanggal_terbit></mat-datepicker>
               </mat-form-field>
               <mat-form-field fxFlex="15%" class="is-light form-primary" id="time">
-                <input matInput formControlName="time" placeholder="Jam Terbit" [ngxTimepicker]="fullTime" [format]="24"
+                <input matInput formControlName="time" placeholder="{{'notification.buat_notifikasi.text8' | translate}}" [ngxTimepicker]="fullTime" [format]="24"
                   readonly>
                 <mat-icon matSuffix>access_time</mat-icon>
                 <ngx-material-timepicker #fullTime></ngx-material-timepicker>
@@ -623,10 +623,10 @@
                 fxLayoutAlign="end center" class="p-16 export">
                 <a #downloadLink></a>
                 <button mat-raised-button type="button" class="is-danger" (click)="import()">
-                  <mat-icon>arrow_downward</mat-icon> Import XLSX
+                  <mat-icon>arrow_downward</mat-icon> {{'global.button.import' | translate}} XLSX
                 </button>
                 <button mat-raised-button type="button" class="is-danger" (click)="export()">
-                  <mat-icon>arrow_upward</mat-icon> Export XLSX
+                  <mat-icon>arrow_upward</mat-icon> {{'global.button.export' | translate}} XLSX
                 </button>
               </div>
               <mat-progress-bar [color]="'primary'" [mode]="'indeterminate'" *ngIf="loadingIndicator">
@@ -652,17 +652,17 @@
                 </ngx-datatable-column>
 
                 <ngx-datatable-column name="{{ls.locale.global.label.name}}" prop="name"></ngx-datatable-column>
-                <ngx-datatable-column name="Kode" prop="code" [sortable]="false">
+                <ngx-datatable-column name="{{'global.label.code' | translate}}" prop="code" [sortable]="false">
                   <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
                     {{row.code ? row.code : '-'}}
                   </ng-template>
                 </ngx-datatable-column>
-                <ngx-datatable-column name="Owner" prop="owner">
+                <ngx-datatable-column name="{{'global.label.owner_name' | translate}}" prop="owner">
                   <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
                     {{row.owner ? row.owner : '-'}}
                   </ng-template>
                 </ngx-datatable-column>
-                <ngx-datatable-column name="Tipe" prop="type">
+                <ngx-datatable-column name="{{'global.label.type' | translate}}" prop="type">
                   <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
                     {{row.type.toUpperCase()}}
                   </ng-template>
