[update]:: fix notification create

--- a/src/app/pages/notification/create/notification-create.component.html
+++ b/src/app/pages/notification/create/notification-create.component.html
@@ -41,7 +41,7 @@
           <div *ngIf="ALLOW_FOR_TYPE.includes(formNotification.controls['user_group'].value)">
             <div fxLayout="row">
               <mat-form-field fxFlex="45" class="is-light form-primary">
-                <mat-select formControlName="notif_type" placeholder="Tipe Notifikasi">
+                <mat-select formControlName="notif_type" placeholder="Tipe Notifikasi" [disabled]="formNotification.controls['user_group'].value !== 'customer'">
                   <mat-option *ngFor="let item of listNotifType" [value]="item.value">{{item.name}}</mat-option>
                 </mat-select>
                 <mat-error
@@ -275,7 +275,7 @@
           </div>
 
           <div fxLayout="row" class="pb-24 px-24">
-            <mat-checkbox class="mt-4 ml-4 mb-8" formControlName="send_ayo" (change)="sendAYOChange($event)">
+            <mat-checkbox class="mt-4 ml-4 mb-8" formControlName="send_ayo" (change)="sendAYOChange($event)" disabled>
               Send from AYO SRC
             </mat-checkbox>
           </div>
