--- a/src/app/shared/search-product-barcode/search-product-barcode.component.html
+++ b/src/app/shared/search-product-barcode/search-product-barcode.component.html
@@ -12,7 +12,7 @@
     (closed)="onClosed()"
   >
     <mat-option *ngFor="let item of filteredOptions" [value]="item.id">
-      {{ item.name }}
+      {{ item.name }} - {{item.id}}
     </mat-option>
     <mat-option *ngIf="isLoading()" disabled>
       <div class="spinner">
